deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qotd-usecase
  namespace: qotd-load
  labels:
    app: qotd
    tier: load
spec:
  type: ClusterIP
  ports:
    - port: 3012
      targetPort: 3012
      protocol: TCP
      name: http
  selector:
    app: qotd-usecase
